@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 20-03-2005 fixed: Htmlparser didnt account for a true ampersand (example: genre 'R&B' from allmusic.com was parsed as 'R')
   - 20-03-2005 fixed: [ 1166726 ] Playback of some AVI files is corrupted.
   - 19-03-2005 added: <keepaspectratio> tag to images + infoimages.  Fixes SF bug 1162592.
   - 19-03-2005 changed: Games bookmark defaults to F: now (so that the <default> tag works correctly)
